Sync code from server

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>Hello from GitHub Actions!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Team Xuanye Home</title>
+    <style>
+        body { font-family: sans-serif; max-width: 800px; margin: 2rem auto; padding: 0 1rem; }
+        h1 { color: #007bff; }
+        .member-card { border: 1px solid #ddd; padding: 1rem; margin-bottom: 1rem; border-radius: 5px; }
+    </style>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+</head>
+<body>
+    <h1>Team Xuanye - CSE 135</h1>
+
+    <h2>Team Members</h2>
+    <div class="member-card">
+        <h3>Kevin (Your Name)</h3>
+        <p><a href="/members/kevin.html">About Me</a></p>
+    </div>
+    <h2>Homework Assignments</h2>
+    <ul>
+        <li><a href="/hw1/hello.php">HW1: PHP Info Page</a></li>
+        <li><a href="/hw1/report.html">HW1: Analytics Report</a></li>
+    </ul>
+</body>
+</html>
