--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
     <h1>Team Xuanye - CSE 135</h1>
 
+    <p>Deployed through Github Actions!</p>
+
     <h2>Team Members</h2>
     <div class="member-card">
         <h3>Kevin (Your Name)</h3>
