--- a/404.html
+++ b/404.html
@@ -1,8 +1,58 @@
 <!DOCTYPE html>
-<html>
-<head><title>404 Not Found</title></head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 - Page Not Found</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #f4f6f8;
+            color: #333;
+            text-align: center;
+        }
+        
+        h1 {
+            font-size: 6rem;
+            margin: 0;
+            color: #2d3748;
+        }
+
+        h2 {
+            margin-top: 0;
+            font-weight: 400;
+        }
+
+        p {
+            margin-bottom: 2rem;
+            color: #666;
+        }
+
+        .btn {
+            text-decoration: none;
+            background-color: #007bff;
+            color: white;
+            padding: 12px 24px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+    </style>
+</head>
 <body>
-    <h1>Whoops! That page is missing.</h1>
-    <p>Return to <a href="/">Home</a></p>
+    <h1>404</h1>
+    <h2>Whoops! That page is missing.</h2>
+    <p>The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.</p>
+    <a href="/" class="btn">Return Home</a>
 </body>
 </html>
