--- a/index.html
+++ b/index.html
@@ -171,5 +171,13 @@
         </div>
     </main>
 
+    <footer>
+        <p>
+            <a href="https://github.com/KeeevinW/cse135-hw1" target="_blank">
+                View Source Code on GitHub
+            </a>
+        </p>
+    </footer>
+
   </body>
 </html>
