--- a/members/kevin.html
+++ b/members/kevin.html
@@ -26,6 +26,7 @@
             width: 100%;
             text-align: center;
             border: 1px solid #e1e4e8;
+            transition: transform 0.3s ease;
         }
 
         h1 {
@@ -34,15 +35,6 @@
             font-size: 1.8rem;
         }
 
-        .tagline {
-            color: #007bff; /* Primary Blue */
-            font-weight: 600;
-            margin-bottom: 1.5rem;
-            display: block;
-            font-size: 0.95rem;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
 
         .bio {
             color: #666;
@@ -64,6 +56,8 @@
             border-radius: 6px;
             font-weight: 500;
             transition: all 0.2s ease;
+            cursor: pointer;
+            border: none;
         }
 
         .btn-primary {
@@ -72,7 +66,7 @@
         }
         .btn-primary:hover {
             background-color: #0056b3;
-            transform: translateY(-1px);
+            transform: translateY(-2px);
         }
 
         .btn-linkedin {
@@ -81,7 +75,7 @@
         }
         .btn-linkedin:hover {
             background-color: #005e93;
-            transform: translateY(-1px);
+            transform: translateY(-2px);
         }
 
         .back-link {
@@ -90,6 +84,7 @@
             font-size: 0.9rem;
             display: inline-flex;
             align-items: center;
+            cursor: pointer;
         }
         .back-link:hover {
             color: #333;
@@ -98,14 +93,12 @@
 </head>
 <body>
 
-    <div class="profile-card">
-
-        
+    <div class="profile-card" id="card">
         <h1>Xuanye Wang</h1>
 
-
         <div class="bio">
-            <p>Hello! I am a third-year student at UCSD (recently transferred from UCSB).</p>
+            <span id="greeting"></span>
+            <p>I am a third-year student at UCSD (recently transferred from UCSB).</p>
         </div>
         
         <div class="contact-links">
@@ -113,8 +106,18 @@
             <a href="https://www.linkedin.com/in/xuanye-wang-9387bb297/" target="_blank" class="btn btn-linkedin">LinkedIn</a>
         </div>
 
-        <a href="/" class="back-link">← Back to Team Home</a>
+        <a onclick="goBack()" class="back-link">← Back to Team Home</a>
     </div>
+
+    <script>
+        function goBack() {
+            if (document.referrer.indexOf(window.location.hostname) !== -1) {
+                window.history.back();
+            } else {
+                window.location.href = '/';
+            }
+        }
+    </script>
 
 </body>
 </html>
