--- a/index.html
+++ b/index.html
@@ -153,11 +153,27 @@
             
         </div>
 
-        <h2>Homework Assignments</h2>
+        <h2>Homework 1 - Client Side Basics, Site and Server Configuration
+Learning Outcomes
+</h2>
         <div class="card">
             <ul>
                 <li><a href="/hw1/hello.php">HW1: PHP Info Page</a></li>
                 <li><a href="/hw1/report.html">HW1: Analytics Report</a></li>
+            </ul>
+        </div>
+
+        <h2>Homework 2 - Server Side Basics</h2>
+        <div class="card">
+            <h3>Part 1: Perl Examples</h3>
+            <ul>
+                <li><a href="/cgi-bin/perl-hello-html-world.pl">Hello HTML</a></li>
+                <li><a href="/cgi-bin/perl-hello-json-world.pl">Hello JSON</a></li>
+                <li><a href="/cgi-bin/perl-env.pl">Environment Variables</a></li>
+                <li><a href="/cgi-bin/perl-get-echo.pl">Echo (GET)</a></li>
+                <li><a href="/cgi-bin/perl-post-echo.pl">Echo (POST)</a></li>
+                <li><a href="/cgi-bin/perl-sessions-1.pl">Session Page 1</a></li>
+                <li><a href="/cgi-bin/perl-sessions-2.pl">Session Page 2</a></li>
             </ul>
         </div>
 
