test renaming cgi-bin

--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@ Learning Outcomes
         <div class="card">
             <h3>Part 1: Perl Examples</h3>
             <ul>
-                <li><a href="/cgi-bin/perl-hello-html-world.pl">Hello HTML</a></li>
-                <li><a href="/cgi-bin/perl-hello-json-world.pl">Hello JSON</a></li>
-                <li><a href="/cgi-bin/perl-env.pl">Environment Variables</a></li>
-                <li><a href="/cgi-bin/perl-get-echo.pl">Echo (GET)</a></li>
-                <li><a href="/cgi-bin/perl-post-echo.pl">Echo (POST)</a></li>
-                <li><a href="/cgi-bin/perl-sessions-1.pl">Session Page 1</a></li>
-                <li><a href="/cgi-bin/perl-sessions-2.pl">Session Page 2</a></li>
+                <li><a href="/hw2/perl-hello-html-world.pl">Hello HTML</a></li>
+                <li><a href="/hw2/perl-hello-json-world.pl">Hello JSON</a></li>
+                <li><a href="/hw2/perl-env.pl">Environment Variables</a></li>
+                <li><a href="/hw2/perl-get-echo.pl">Echo (GET)</a></li>
+                <li><a href="/hw2/perl-post-echo.pl">Echo (POST)</a></li>
+                <li><a href="/hw2/perl-sessions-1.pl">Session Page 1</a></li>
+                <li><a href="/hw2/perl-sessions-2.pl">Session Page 2</a></li>
             </ul>
         </div>
 
