--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <li><a href="/cgi-bin/python-hello-html-world.py">Hello HTML</a></li>
           <li><a href="/cgi-bin/python-hello-json-world.py">Hello JSON</a></li>
           <li><a href="/cgi-bin/python-env.py">Environment Variables</a></li>
-          <li><a href="/general-echo.html">Echo Form (Select Python)</a></li>
+          <li><a href="/python-general-echo.html">Echo Form (Select Python)</a></li>
           <li>
             <a href="/cgi-bin/python-sessions-1.py">Session State (Page 1)</a>
           </li>
