--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@
           </li>
         </ul>
       </div>
+      <div class="card">
+        <h3>Part 3: PHP Examples</h3>
+        <ul>
+          <li><a href="/cgi-bin/php-hello-html-world.php">Hello HTML</a></li>
+          <li><a href="/cgi-bin/php-hello-json-world.php">Hello JSON</a></li>
+          <li><a href="/cgi-bin/php-env.php">Environment Variables</a></li>
+          <li><a href="/cgi-bin/php-general-echo.php">Echo Form (Select PHP)</a></li>
+          <li>
+            <a href="/cgi-bin/php-sessions-1.php">Session State (Page 1)</a>
+          </li>
+        </ul>
+      </div>
 
       <h2>Matomo Analytics</h2>
       <div class="analytics-box">
