--- a/index.html
+++ b/index.html
@@ -202,6 +202,17 @@
           </li>
         </ul>
       </div>
+      <div class=""card>
+        <h3>Part 4L Go Examples</h3>
+        <ul>
+          <li><a href="/cgi-bin/go-hello-html-world">Hello HTML</a></li>
+          <li><a href="/cgi-bin/go-hello-json-world">Hello JSON</a></li>
+          <li><a href="/cgi-bin/go-env">Environment Variables</a></li>
+          <li><a href="/cgi-bin/go-general-echo">Echo Form (Select Go)</a></li>
+          <li>
+            <a href="/cgi-bin/go-sessions-1">Session State (Page 1)</a>
+          </li>
+      </div>
 
       <h2>Matomo Analytics</h2>
       <div class="analytics-box">
