--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
           </li>
         </ul>
       </div>
-      <div class=""card>
-        <h3>Part 4L Go Examples</h3>
+      <div class="card">
+        <h3>Part 4 Go Examples</h3>
         <ul>
           <li><a href="/cgi-bin/go-hello-html-world">Hello HTML</a></li>
           <li><a href="/cgi-bin/go-hello-json-world">Hello JSON</a></li>
