--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         transition:
           transform 0.2s,
           box-shadow 0.2s;
+        margin-bottom: 1rem;
       }
 
       .card:hover {
