rename files and fix path

--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
       <div class="card">
         <h3>Part 4 Go Examples</h3>
         <ul>
-          <li><a href="/cgi-bin/go-hello-html-world">Hello HTML</a></li>
-          <li><a href="/cgi-bin/go-hello-json-world">Hello JSON</a></li>
-          <li><a href="/cgi-bin/go-env">Environment Variables</a></li>
-          <li><a href="/cgi-bin/go-general-echo">Echo Form (Select Go)</a></li>
+          <li><a href="/cgi-bin/go-hello-html-world.go">Hello HTML</a></li>
+          <li><a href="/cgi-bin/go-hello-json-world.go">Hello JSON</a></li>
+          <li><a href="/cgi-bin/go-env.go">Environment Variables</a></li>
+          <li><a href="/cgi-bin/go-general-echo.go">Echo Form (Select Go)</a></li>
           <li>
-            <a href="/cgi-bin/go-sessions-1">Session State (Page 1)</a>
+            <a href="/cgi-bin/go-sessions-1.go">Session State (Page 1)</a>
           </li>
       </div>
 
