--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <li><a href="/cgi-bin/go-hello-html-world.cgi">Hello HTML</a></li>
           <li><a href="/cgi-bin/go-hello-json-world.cgi">Hello JSON</a></li>
           <li><a href="/cgi-bin/go-env.cgi">Environment Variables</a></li>
-          <li><a href="/cgi-bin/go-general-echo.go.cgi">Echo Form (Select Go)</a></li>
+          <li><a href="/cgi-bin/go-general-echo.cgi">Echo Form (Select Go)</a></li>
           <li>
             <a href="/cgi-bin/go-sessions-1.cgi">Session State (Page 1)</a>
           </li>
