--- a/index.html
+++ b/index.html
@@ -124,6 +124,17 @@
       }
     </style>
   </head>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JR58L8K6VC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JR58L8K6VC');
+</script>
+
   <body>
     <script>
       var _paq = (window._paq = window._paq || []);
