--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       })();
     </script>
     <header>
-      <h1>Team Xuanye</h1>
+      <h1>Team Xuanye test</h1>
       <p class="subtitle">CSE 135</p>
     </header>
 
