--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     gtag('config', 'G-JR58L8K6VC');
     </script>
 
+    <script src="https://cdn.logr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script>window.LogRocket && window.LogRocket.init('btev7e/xuanyesite');</script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team Xuanye - CSE 135</title>
@@ -154,7 +157,7 @@
       })();
     </script>
     <header>
-      <h1>Team Xuanye test</h1>
+      <h1>Team Xuanye</h1>
       <p class="subtitle">CSE 135</p>
     </header>
 
