--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
           <li><a href="/cgi-bin/perl-env.pl">Environment Variables</a></li>
           <li><a href="/cgi-bin/perl-get-echo.pl">Echo (GET)</a></li>
           <li><a href="/cgi-bin/perl-post-echo.pl">Echo (POST)</a></li>
+          <li><a href="/cgi-bin/perl-general-echo.pl">Echo (General)</a></li>
           <li><a href="/cgi-bin/perl-sessions-1.pl">Session Page 1</a></li>
           <li><a href="/cgi-bin/perl-sessions-2.pl">Session Page 2</a></li>
         </ul>
