--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
           <li><a href="/cgi-bin/perl-get-echo.pl">Echo (GET)</a></li>
           <li><a href="/cgi-bin/perl-post-echo.pl">Echo (POST)</a></li>
           <li><a href="/cgi-bin/perl-general-echo.pl">Echo (General)</a></li>
-          <li><a href="/cgi-bin/perl-sessions-1.pl">Session Page 1</a></li>
-          <li><a href="/cgi-bin/perl-sessions-2.pl">Session Page 2</a></li>
+
         </ul>
       </div>
       <div class="card">
@@ -209,7 +208,10 @@
           <li><a href="/cgi-bin/python-hello-html-world.py">Hello HTML</a></li>
           <li><a href="/cgi-bin/python-hello-json-world.py">Hello JSON</a></li>
           <li><a href="/cgi-bin/python-env.py">Environment Variables</a></li>
-          <li><a href="/cgi-bin/python-general-echo.py">Echo Form (Select Python)</a></li>
+          <li><a href="/cgi-bin/python-general-echo.py">General Echo</a></li>
+          <li><a href="/cgi-bin/python-get-echo.py">GET Echo</a></li>
+          <li><a href="/cgi-bin/python-post-echo.py">POST Echo</a></li>
+          
           <li>
             <a href="/cgi-bin/python-sessions-1.py">Session State (Page 1)</a>
           </li>
@@ -221,7 +223,10 @@
           <li><a href="/cgi-bin/php-hello-html-world.php">Hello HTML</a></li>
           <li><a href="/cgi-bin/php-hello-json-world.php">Hello JSON</a></li>
           <li><a href="/cgi-bin/php-env.php">Environment Variables</a></li>
-          <li><a href="/cgi-bin/php-general-echo.php">Echo Form (Select PHP)</a></li>
+          <li><a href="/cgi-bin/php-general-echo.php">General Echo</a></li>
+          <li><a href="/cgi-bin/php-get-echo.php">GET Echo</a></li>
+          <li><a href="/cgi-bin/php-post-echo.php">POST Echo</a></li>
+          
           <li>
             <a href="/cgi-bin/php-sessions-1.php">Session State (Page 1)</a>
           </li>
@@ -233,7 +238,9 @@
           <li><a href="/cgi-bin/go-hello-html-world.cgi">Hello HTML</a></li>
           <li><a href="/cgi-bin/go-hello-json-world.cgi">Hello JSON</a></li>
           <li><a href="/cgi-bin/go-env.cgi">Environment Variables</a></li>
-          <li><a href="/cgi-bin/go-general-echo.cgi">Echo Form (Select Go)</a></li>
+          <li><a href="/cgi-bin/go-general-echo.cgi">General Echo</a></li>
+          <li><a href="/cgi-bin/go-get-echo.cgi">GET Echo</a></li>
+          <li><a href="/cgi-bin/go-post-echo.cgi">POST Echo</a></li>
           <li>
             <a href="/cgi-bin/go-sessions-1.cgi">Session State (Page 1)</a>
           </li>
