add echo form to the main page

--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
       </div>
 
       <h2>Homework 2 - Server Side Basics</h2>
+
+      <div class="card" style="border-left: 5px solid #007bff; background-color: #f0f8ff;">
+        <h3>Echo Form</h3>
+        <a href="/echo.html" class="btn">Echo Form &rarr;</a>
+      </div>
+
       <div class="card">
         <h3>Part 1: Perl Examples</h3>
         <ul>
