--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
       <div class="card" style="border-left: 5px solid #007bff; background-color: #f0f8ff;">
         <h3>Echo Form</h3>
-        <a href="/echo.html" class="btn">Echo Form &rarr;</a>
+        <a href="/echo-form.html" class="btn">Echo Form &rarr;</a>
       </div>
 
       <div class="card">
