--- a/echo-form.html
+++ b/echo-form.html
@@ -15,6 +15,15 @@
 <h1>CSE 135 Echo Form</h1>
 
 <form id="echoForm" action="echo-php.php" method="POST">
+    
+    <div class="form-group">
+        <label for="lang">Target Language:</label>
+        <select id="lang" name="lang">
+            <option value="php">PHP</option>
+            <option value="python">Python</option>
+            <option value="go">Go</option>
+        </select>
+    </div>
 
     <div class="form-group">
         <label for="method">HTTP Method:</label>
