fix echo form endpoints

--- a/echo-form.html
+++ b/echo-form.html
@@ -66,9 +66,9 @@
         const output = document.getElementById('output');
 
         const endpoints = {
-            'php': 'echo-php.php',
-            'python': 'echo-python.py',
-            'go': 'echo-go.cgi',
+            'php': 'cgi-bin/php-general-echo.php',
+            'python': 'cgi-bin/python-general-echo.py',
+            'go': 'cgi-bin/go-general-echo.go',
         };
 
         let url = endpoints[lang];
