--- a/echo-form.html
+++ b/echo-form.html
@@ -68,7 +68,7 @@
         const endpoints = {
             'php': 'cgi-bin/php-general-echo.php',
             'python': 'cgi-bin/python-general-echo.py',
-            'go': 'cgi-bin/go-general-echo.go',
+            'go': 'cgi-bin/go-general-echo.cgi',
         };
 
         let url = endpoints[lang];
