add session files and update index.html

--- a/index.html
+++ b/index.html
@@ -217,10 +217,7 @@
           <li><a href="/cgi-bin/python-general-echo.py">General Echo</a></li>
           <li><a href="/cgi-bin/python-get-echo.py">GET Echo</a></li>
           <li><a href="/cgi-bin/python-post-echo.py">POST Echo</a></li>
-          
-          <li>
-            <a href="/cgi-bin/python-sessions-1.py">Session State (Page 1)</a>
-          </li>
+          <li><a href="/cgi-bin/python-sessions-1.py"><strong>Sessioning</strong></a></li>
         </ul>
       </div>
       <div class="card">
@@ -232,10 +229,7 @@
           <li><a href="/cgi-bin/php-general-echo.php">General Echo</a></li>
           <li><a href="/cgi-bin/php-get-echo.php">GET Echo</a></li>
           <li><a href="/cgi-bin/php-post-echo.php">POST Echo</a></li>
-          
-          <li>
-            <a href="/cgi-bin/php-sessions-1.php">Session State (Page 1)</a>
-          </li>
+          <li><a href="/cgi-bin/php-sessions-1.php"><strong>Session</strong></a></li>
         </ul>
       </div>
       <div class="card">
@@ -247,9 +241,7 @@
           <li><a href="/cgi-bin/go-general-echo.cgi">General Echo</a></li>
           <li><a href="/cgi-bin/go-get-echo.cgi">GET Echo</a></li>
           <li><a href="/cgi-bin/go-post-echo.cgi">POST Echo</a></li>
-          <li>
-            <a href="/cgi-bin/go-sessions-1.cgi">Session State (Page 1)</a>
-          </li>
+          <li><a href="/cgi-bin/go-sessions-1.cgi"><strong>Sessioning</strong></a></li>
       </div>
 
       <h2>Matomo Analytics</h2>
