--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
           <li><a href="/cgi-bin/perl-get-echo.pl">Echo (GET)</a></li>
           <li><a href="/cgi-bin/perl-post-echo.pl">Echo (POST)</a></li>
           <li><a href="/cgi-bin/perl-general-echo.pl">Echo (General)</a></li>
+          <li><a href="/cgi-bin/perl-sessions-1.pl">Sessioning</a></li>
 
         </ul>
       </div>
