--- a/perl-cgiform.html
+++ b/perl-cgiform.html
@@ -4,83 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perl CGI Form</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            max-width: 600px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-            line-height: 1.5;
-            color: #333;
-        }
-        h1 { color: #007bff; }
-        .card {
-            border: 1px solid #ddd;
-            padding: 1.5rem;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-            margin-bottom: 2rem;
-        }
-        label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 0.5rem;
-            margin-bottom: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box; 
-        }
-        button {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1rem;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-        a:hover { text-decoration: underline; }
-    </style>
 </head>
 <body>
 
-    <h1>Perl CGI Forms</h1>
-    <p>Use the forms below to interact with your Perl CGI scripts.</p>
+    <h1>Perl Session Entry</h1>
+    <p>Enter your name to test the Perl Session.</p>
 
-    <div class="card">
-        <h2>Session Setup</h2>
-        <p>Enter your name to store it in a server-side Perl Session.</p>
-        
-        <form action="/cgi-bin/perl-sessions-1.pl" method="POST">
-            <label for="username">Enter Name:</label>
-            <input type="text" id="username" name="username" placeholder="e.g. John Doe" required>
-            
-            <button type="submit">Start Session</button>
-        </form>
-    </div>
+    <form action="/cgi-bin/perl-sessions-1.pl" method="POST">
+        <label for="username">Enter Name:</label>
+        <input type="text" id="username" name="username" required>
+        <br><br>
+        <button type="submit">Start Session</button>
+    </form>
 
-    <div class="card">
-        <h2>Simple Echo Test</h2>
-        <p>Test the standard POST echo script.</p>
-        <form action="/cgi-bin/perl-post-echo.pl" method="POST">
-            <label for="message">Message:</label>
-            <input type="text" id="message" name="message" placeholder="Hello World">
-            <button type="submit">Send Echo</button>
-        </form>
-    </div>
-
-    <p><a href="/index.html">&larr; Back to Home</a></p>
+    <br>
+    <a href="/index.html">Back to Home</a>
 
 </body>
 </html>
