--- a/fingerprint.html
+++ b/fingerprint.html
@@ -23,7 +23,7 @@
     <hr>
 
     <h3>3. Test It</h3>
-    <p>Click the button below to delete your session cookie. Because we have your fingerprint, your data will reappear immediately on reload.</p>
+    <p>Click the button below to delete your session cookie. But data will reappear immediately opon reload becasue the fingerprint remains the same.</p>
     <button onclick="clearCookies()">Delete Cookies & Reload</button>
 
     <script>
